--- a/assignment_two_website_revision_one/index.html
+++ b/assignment_two_website_revision_one/index.html
@@ -54,7 +54,7 @@
 						<a href="about.html">Who is H.Rackham? </a>		
 					</li>
 					<li>
-						<a href="contact.html"> More translations </a>	
+						<a href="contact.html">Need more translations ?</a>	
 					</li>
 				</ul>
 
