sharelist assignment using bootstrap added

--- a/assignment_psd_microsave/index.html
+++ b/assignment_psd_microsave/index.html
@@ -210,13 +210,13 @@
       <ul>
 
           <li>
-            <a href="#"> Home</a>
+            <a href="#" > Home</a>
           </li>
           <li>
             |
           </li> 
            <li>
-            <a href="#"> Services </a>
+            <a href="#" > Services </a>
           </li>
            <li>
             |
@@ -274,9 +274,9 @@
 
     <div class="follow"> 
         Follow us &nbsp;&nbsp;
-        <a href="" ><img src="images/facebook.png" class=" followImg"></a>
-        <a href="" ><img src="images/twitter.png"  class=" followImg"></a>
-        <a href="" ><img src="images/linkedin.png" class=" followImg"></a>
+        <a href="#"  ><img src="images/facebook.png" class=" followImg"></a>
+        <a href="#" ><img src="images/twitter.png"  class=" followImg"></a>
+        <a href="#" ><img src="images/linkedin.png" class=" followImg"></a>
     <div>
     <div class="clear"></div>  
 
