Microsave rev 2 adjusted again for perfectpixel

--- a/assignment_3_rev_2/index.html
+++ b/assignment_3_rev_2/index.html
@@ -55,10 +55,6 @@
 
     <div class="contentWrapper">
 
-
-
-
-
       <div class="firstFold"> 
 
        <div class="sliderContainer">
@@ -223,12 +219,14 @@
 
      <div class="copyright "> MicroSave&copy;2012 </div>
 
+
+
      <div class="follow"> 
-      <ul>
-        <li> Follow us </li>
-        <li> <a href="#"> <img src="images/facebook.png" class=" followImg">              </a></li>
-        <li> <a href="#"> <a href="#" ><img src="images/twitter.png"  class=" followImg"> </a></li>
-        <li> <a href="#"> <a href="#" ><img src="images/linkedin.png" class=" followImg"> </a></li>
+      <div class="followUs">Follow us  </div>   
+      <ul>   
+        <li> <a href="#"> </a></li>
+        <li> <a href="#"> </a></li>
+        <li> <a href="#"> </a></li>
       </ul>
     </div>
     <div class="clear"></div>  
