Langmart modified for Links

--- a/assignment_6/index.html
+++ b/assignment_6/index.html
@@ -16,7 +16,7 @@
 		<div class="header">
 			<div class="container">
 
-				<a href="#" class="logo">MicroSave Logo</a>
+				<a href="#" class="logo">Langmart Logo</a>
 
 				<ul>
 					<li>
@@ -75,6 +75,8 @@
             Lorem Ipsum is simply dummy text of the printing 
             and typesetting industry. Lorem Ipsum has been...
           </p>
+          <a href="#">more</a>
+
         </li>
 
         <li>
@@ -84,6 +86,7 @@
             Lorem Ipsum is simply dummy text of the printing 
             and typesetting industry. Lorem Ipsum has been...
           </p>
+           <a href="#">more</a>
         </li>
 
         <li>
@@ -93,6 +96,7 @@
           Lorem Ipsum is simply dummy text of the printing 
           and typesetting industry. Lorem Ipsum has been...
         </p>
+         <a href="#">more</a>
       </li>
 
       <li>
@@ -102,6 +106,7 @@
         Lorem Ipsum is simply dummy text of the printing 
         and typesetting industry. Lorem Ipsum has been...
       </p>
+       <a href="#">more</a>
     </li>  
   </ul>
   <div class="clear"></div>
