Links Fixed for Destination Center

--- a/assignment_7/index.html
+++ b/assignment_7/index.html
@@ -148,7 +148,7 @@
            Suvarnabhumi Airport, which is linked to the city by buses, taxis,
            and Airport Rail Link, a highspeed train service into downtown Bangkok.
          </p>
-         <a href="#">Book Flight Tickets <i></i></a>
+         <a href="#">Book Flight Tickets</a>
        </div>
        <div class="clear"></div>
      </div>
@@ -164,15 +164,15 @@
          Thailand operate. The Thornburi Train Station (formerly known as
          Bangkok Noi Station) serves forlocal or nearby travel.
        </p>
-       <a href="#">Book Flight Tickets <i></i></a>
+        <a href="#">View Website</a>
      </div>
      <div class="clear"></div>
    </div>
 
-   <div class="byMode">
+   <div class="byMode ">
     <img src="images/by_bus.png">
-    <div class="travelOptiongRight">
-      <div class="travelHeading"> By Bus</div>
+    <div class="travelOptiongRight margin10px">
+      <div class="travelHeading "> By Bus</div>
       <p>Buses to and from other parts of Thailand including Pattaya, 
        Krabi, Phuket and Ko Samui and also to neighbouring countries
        operate in Bangkok. There are three major bus terminals in
@@ -183,7 +183,7 @@
        terminals and avoid travel agents and private buses which are 
        not the most reliable.
      </p>
-     <a href="#">Book Flight Tickets <i></i></a>
+    
    </div>
    <div class="clear"></div>
  </div>
