Destination Center Pixel Perfect almost done.

--- a/assignment_7/index.html
+++ b/assignment_7/index.html
@@ -31,12 +31,12 @@
        </div> 
        <div class="clear"></div>
 
-       </li>
-    </ul>
+     </li>
+   </ul>
 
-    <div class="clear"></div>
-   </div>
-  </div>
+   <div class="clear"></div>
+ </div>
+</div>
 <!-- HEADER COMPLETES -->
 
 <!--========================== FIRST FOLD =======================-->
@@ -118,7 +118,7 @@
     <!--___________________ sfLeft Completes  __________________________ -->
 
     <div class="sfRight">
-      <div class="howToReach"> HOW TO REACH BANGKOK </div>
+      <div class="howToReach"> How to reach Bangkok </div>
 
       <div class="mapWrapper">
         <div id="map_canvas"></div>
@@ -133,7 +133,8 @@
 
 
       <div class="travelOptions">
-       Travel Options
+
+       <div class="travelOptionsText">Travel options</div>
 
        <div class="travelOptionsLine"></div>
 
@@ -155,8 +156,8 @@
 
      <div class="byMode">
       <img src="images/by_train.png">
-      <div class="travelOptiongRight">
-        <div class="travelHeading"> By Train </div>
+      <div class="travelOptiongRight byModeSecondChild">
+        <div class="travelHeading "> By Train </div>
         <p>Bangkok is well connected by rail to the rest of Thailand and to 
          neighbouring countries like Malaysia, Cambodia and Laos. The main
          railway station of Bangkok is the Hua Lamphong Railway Station 
@@ -164,7 +165,7 @@
          Thailand operate. The Thornburi Train Station (formerly known as
          Bangkok Noi Station) serves forlocal or nearby travel.
        </p>
-        <a href="#">View Website</a>
+       <a href="#">View Website</a>
      </div>
      <div class="clear"></div>
    </div>
@@ -183,28 +184,28 @@
        terminals and avoid travel agents and private buses which are 
        not the most reliable.
      </p>
-    
+     
    </div>
    <div class="clear"></div>
  </div>
 
  <div class="notSure"> Not sure of best route to Bangkok from your city. Search it on routeplanner- </div>
 
-  <div class="departureCity"> 
-    <div class="dcText"> Departure city - </div>
-    <div class="departureCityRight">  
-      <select class="selectBoxDeparture"> 
-        <option>Select a city</option>
-        <option>New Delhi</option>
-        <option>Tokyo</option>
-        <option>others</option>
-      </select>
+ <div class="departureCity"> 
+  <div class="dcText"> Departure city - </div>
+  <div class="departureCityRight">  
+    <select class="selectBoxDeparture"> 
+      <option>Select a city</option>
+      <option>New Delhi</option>
+      <option>Tokyo</option>
+      <option>others</option>
+    </select>
 
-      <input type="submit" class="searchOnRoutePlanner" Value="Search on Route Planner">
+    <input type="submit" class="searchOnRoutePlanner" Value="Search on Route Planner">
     <div class="clear"></div>
-    </div>
-    <div class="clear"></div>  
   </div>
+  <div class="clear"></div>  
+</div>
 </div>
 </div><!-- traveloptions closed-->
 <div class="clear"></div>
